<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/city"
        style="@style/normalText"
        android:text="@string/city"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/weather_temperature"
        style="@style/normalText"
        android:padding="0dp"
        android:text="@string/temperature"
        android:textAlignment="center"
        android:textSize="150sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.sy.myweather.FontIconView
        style="@style/normalText"
        android:layout_marginBottom="80dp"
        android:text="@string/celcius"
        app:layout_constraintBottom_toBottomOf="@id/weather_temperature"
        app:layout_constraintLeft_toRightOf="@id/weather_temperature"
        app:layout_constraintTop_toTopOf="@id/weather_temperature" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/weather_temperature">

        <TextView
            android:id="@+id/weather_info"
            style="@style/normalText"
            android:textSize="20sp"
            android:layout_marginRight="5dp"
            android:text="晴" />

        <com.sy.myweather.FontIconView
            android:id="@+id/weather_icon"
            style="@style/normalText"
            android:text="@string/sun" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

